# smart-car-engine

./: CMakeLists.txt  README.md
conf/: db.conf
include/: AsyncAuditLogger.hpp  CarData.hpp  ModuleServer.hpp  SharedMemoryManager.hpp
source/: AsyncAuditLogger.cpp  ConfigManager.cpp  SharedMemoryManager.cpp  main.cpp
source/client/: car_ai.cpp  car_ctl.cpp
source/server/modules/: air.cpp  door.cpp  fault.cpp  status.cpp
tests/: test_AsyncAuditLogger.cpp  test_shared_memory.cpp
